Fix white space carousel

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -12,7 +12,9 @@
 }
 
 .navbar {
+    align-items: center;
     background-color: $color-primary !important;
+    height: 7vh;
 }
 
 .text-color {
